fix end chat alignment, send button resizing

--- a/livenow-MSUDenver.css
+++ b/livenow-MSUDenver.css
@@ -143,7 +143,7 @@ color: #fff !important;
 height: 28px;
 width: 115px;
 border-radius: 5px;
-margin: 20px 30px 2px 0;
+margin: 5px 30px 2px 0 !important;
 text-align: center;
 padding-left: 0px;
 text-transform: uppercase;
@@ -172,7 +172,7 @@ color: #fff !important;
 height: 28px;
 width: 115px;
 border-radius: 5px;
-margin: 20px 30px 2px 0;
+margin: 5px 30px 2px 0;
 text-align: center;
 padding-left: 0px;
 font-weight: bold;
@@ -202,7 +202,7 @@ color: #fff !important;
 height: 28px;
 width: 115px;
 border-radius: 5px;
-margin: 20px 30px 2px 0;
+margin: 5px 30px 2px 0;
 text-align: center;
 padding-left: 0px;
 text-transform: uppercase;
@@ -785,10 +785,10 @@ text-decoration: none;
 font-size: 14px;
 font-weight: bold;
 text-align: center;
-padding-top: 13px;
+padding-top: 12px;
 /*padding-right: 5px;*/
-width: 115px;
-height: 27px;
+width: 113px;
+height: 26px;
 color: #fff;
 text-transform: uppercase;
 /*ADDED*/
@@ -1999,7 +1999,7 @@ color: #fff !important;
 height: 28px;
 width: 115px;
 border-radius: 5px;
-margin: 20px 30px 2px 0;
+margin: 5px 30px 2px 0;
 text-align: center;
 padding-left: 0px;
 text-transform: uppercase;
@@ -2028,7 +2028,7 @@ color: #fff !important;
 height: 28px;
 width: 115px;
 border-radius: 5px;
-margin: 20px 30px 2px 0;
+margin: 5px 30px 2px 0;
 text-align: center;
 padding-left: 0px;
 text-transform: uppercase;
@@ -2057,7 +2057,7 @@ color: #fff !important;
 height: 28px;
 width: 115px;
 border-radius: 5px;
-margin: 20px 30px 2px 0;
+margin: 5px 30px 2px 0;
 text-align: center;
 padding-left: 0px;
 text-transform: uppercase;
